Asyncronouse Account Processing ...

--- a/Salesforce_APEX/Apex Testing/Days_Within_30Days.cls
+++ b/Salesforce_APEX/Apex Testing/Days_Within_30Days.cls
@@ -1,38 +1,44 @@
 @isTest
 private class TestVerifyDate {
-    
-    @isTest
-    static void testDateWithin30DaysTrue() {
-        // date2 is 10 days after date1 → within range
-        Date date1 = Date.today();
-        Date date2 = date1.addDays(10);
 
-        Date result = VerifyDate.CheckDates(date1, date2);
-
-        System.assertEquals(date2, result, 'Should return date2 if within 30 days');
-    }
-    
     @isTest
-    static void testDateInPast() {
-        // date2 is before date1 → should return end of month
-        Date date1 = Date.newInstance(2025, 8, 10);
-        Date date2 = date1.addDays(-5); // in the past
-
-        Date result = VerifyDate.CheckDates(date1, date2);
-        
-        Date expectedEndOfMonth = Date.newInstance(2025, 8, 31);
-        System.assertEquals(expectedEndOfMonth, result, 'Should return end of month when date2 is in the past');
-    }
-    
-    @isTest
-    static void testDateBeyond30Days() {
-        // date2 is exactly 30 days after date1 → should return end of month
+    static void testWithin30Days() {
         Date date1 = Date.newInstance(2025, 8, 1);
-        Date date2 = date1.addDays(30); // not within next 30 days
+        Date date2 = date1.addDays(10); // within 30 days
+        Test.startTest();
+            Date result = VerifyDate.CheckDates(date1, date2);
+        Test.stopTest();
+        System.assertEquals(date2, result, 'Should return date2 when within 30 days');
+    }
+
+    @isTest
+    static void testDateInPastReturnsEndOfMonth_February() {
+        // Use February (28 days in 2025) to ensure SetEndOfMonthDate works for 28-day month
+        Date date1 = Date.newInstance(2025, 2, 15);
+        Date date2 = date1.addDays(-5); // in the past
+        Date expected = Date.newInstance(2025, 2, 28);
+
+        Test.startTest();
+            Date result = VerifyDate.CheckDates(date1, date2);
+        Test.stopTest();
+        System.assertEquals(expected, result, 'Past date2 should return end-of-month for date1');
+    }
+
+    @isTest
+    static void testExactly30DaysReturnsEndOfMonth() {
+        Date date1 = Date.newInstance(2025, 8, 1);
+        Date date2 = date1.addDays(30); // exactly 30 days away -> should NOT be considered within 30 days
+        Date expected = Date.newInstance(2025, 8, 31);
 
         Date result = VerifyDate.CheckDates(date1, date2);
-        
-        Date expectedEndOfMonth = Date.newInstance(2025, 8, 31);
-        System.assertEquals(expectedEndOfMonth, result, 'Should return end of month when date2 is >= 30 days away');
+        System.assertEquals(expected, result, 'date2 exactly 30 days after date1 should return end-of-month');
+    }
+
+    @isTest
+    static void testDateEqualsDate1ReturnsDate2() {
+        Date date1 = Date.newInstance(2025, 8, 10);
+        Date date2 = date1; // same day -> within 30 days
+        Date result = VerifyDate.CheckDates(date1, date2);
+        System.assertEquals(date2, result, 'When date2 equals date1, CheckDates should return date2');
     }
 }
